syntax = "proto3";

package im.repo.v1;

import "common/v1/types.proto";

option go_package = "github.com/ceyewan/gochat/api/gen/im_repo/v1;imrepov1";

service UserService {
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // ... 其他 RPC
}

message CreateUserRequest {
  string username = 1;
  string password_hash = 2;
  string avatar_url = 3;
  bool is_guest = 4;
}

message CreateUserResponse {
  common.v1.User user = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  common.v1.User user = 1;
}
